Add blockchain statistics to Overview tab

--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -1,9 +1,12 @@
 name: Flatpak
 
-on: [push, pull_request]
+on:
+  pull_request:
+    types: [ closed ]
 
 jobs:
   flatpak:
+    if: github.event.pull_request.merged == true
     name: "Flatpak"
     runs-on: ubuntu-latest
     container:
