--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,11 +6,15 @@
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
 
 if(WIN32)
-  set(APP_ICON_RESOURCE_WINDOWS
+  set(APP_ICON_RESOURCE
       "${${PROJECT_NAME}_SOURCE_DIR}/package/windows/app.rc"
   )
+elseif(APPLE)
+  set(APP_ICON_RESOURCE
+      "${${PROJECT_NAME}_SOURCE_DIR}/package/icons/app-1024.icns"
+  )
 else()
-  set(APP_ICON_RESOURCE_WINDOWS "")
+  set(APP_ICON_RESOURCE "")
 endif()
 
 add_library(metier-rpc OBJECT "")
@@ -56,13 +60,14 @@ endif()
 
 add_executable(
   "${PROJECT_NAME}"
+   MACOSX_BUNDLE
   "${object-deps}"
   "${cxx-sources}"
   "${cxx-headers}"
   "${moc-sources}"
   "${moc-headers}"
   "${rcc-sources}"
-  "${APP_ICON_RESOURCE_WINDOWS}"
+  "${APP_ICON_RESOURCE}"
 )
 
 target_include_directories(
@@ -90,7 +95,16 @@ target_link_libraries(
 )
 
 if(METIER_QML_INTERFACE)
-  target_link_libraries("${PROJECT_NAME}" PRIVATE Qt5::Qml Qt5::Quick)
+  target_link_libraries(
+    "${PROJECT_NAME}" 
+    PRIVATE 
+      Qt5::Qml 
+      Qt5::QSvgPlugin
+      Qt5::QSvgIconPlugin
+      Qt5::Quick
+      Qt5::Svg 
+  )
+  qt5_import_qml_plugins("${PROJECT_NAME}")
 else()
   target_link_libraries("${PROJECT_NAME}" PRIVATE metier-ui Qt5::Widgets)
 endif()
@@ -115,4 +129,42 @@ if(METIER_USE_DEFAULT_BLOCKCHAIN)
   )
 endif()
 
-install(TARGETS "${PROJECT_NAME}")
+if(APPLE)
+  install(TARGETS "${PROJECT_NAME}" BUNDLE DESTINATION . COMPONENT metier-bundle)
+else()
+  install(TARGETS "${PROJECT_NAME}" COMPONENT metier-bin)
+endif()
+
+if(APPLE)
+# To generate the .dmg file, execute the following command in the build folder:
+#  cpack -G DragNDrop
+#
+# Execute the command after cmake --build, but before cmake --install.
+
+  set(CPACK_DRAGNDROP_COMPONENT_INSTALL TRUE)
+
+  get_cmake_property(CPACK_COMPONENTS_ALL COMPONENTS)
+  list(REMOVE_ITEM CPACK_COMPONENTS_ALL secp256k1)
+  
+  set(CPACK_PACKAGE_NAME metier)
+  set(CPACK_PACKAGE_VERSION_MAJOR 1)
+  set(CPACK_PACKAGE_VERSION_MINOR 0)
+  set(CPACK_PACKAGE_VERSION_PATCH 0)
+
+  set(RESOURCE_FILES
+    "${APP_ICON_RESOURCE}")
+
+  set_target_properties("${PROJECT_NAME}" PROPERTIES
+    MACOSX_BUNDLE TRUE
+    MACOSX_BUNDLE_BUNDLE_NAME "${METIER_APPSTREAM_NAME}"
+    MACOSX_BUNDLE_BUNDLE_VERSION "1.0.0"
+    MACOSX_BUNDLE_COPYRIGHT "Copyright (c) 2021 Open Transactions"
+    MACOSX_BUNDLE_SHORT_VERSION_STRING "1.0.0"
+    MACOSX_BUNDLE_GUI_IDENTIFIER "${METIER_APPSTREAM_ID}"
+    MACOSX_BUNDLE_ICON_FILE "app-1024.icns"
+    RESOURCE "${RESOURCE_FILES}"
+    )
+    
+  set(CPACK_GENERATOR "DRAGNDROP")
+  include(CPack)
+endif()
