Modified macos packaging to add variables for version numbers and generate separate dmg files for metier and metierctl.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -130,9 +130,9 @@ if(METIER_USE_DEFAULT_BLOCKCHAIN)
 endif()
 
 if(APPLE)
-  install(TARGETS "${PROJECT_NAME}" BUNDLE DESTINATION . COMPONENT metier-bundle)
+  install(TARGETS "${PROJECT_NAME}" BUNDLE DESTINATION . COMPONENT METIER-BUNDLE)
 else()
-  install(TARGETS "${PROJECT_NAME}" COMPONENT metier-bin)
+  install(TARGETS "${PROJECT_NAME}" COMPONENT METIER_BIN)
 endif()
 
 if(APPLE)
@@ -142,14 +142,17 @@ if(APPLE)
 # Execute the command after cmake --build, but before cmake --install.
 
   set(CPACK_DRAGNDROP_COMPONENT_INSTALL TRUE)
+  set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
+  set(CPACK_DMG_METIER-BUNDLE_FILE_NAME "metier-${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}")
+  set(CPACK_DMG_METIER-CTL_FILE_NAME "metierctl-${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}")
 
   get_cmake_property(CPACK_COMPONENTS_ALL COMPONENTS)
   list(REMOVE_ITEM CPACK_COMPONENTS_ALL secp256k1)
   
   set(CPACK_PACKAGE_NAME metier)
-  set(CPACK_PACKAGE_VERSION_MAJOR 1)
-  set(CPACK_PACKAGE_VERSION_MINOR 0)
-  set(CPACK_PACKAGE_VERSION_PATCH 0)
+  set(CPACK_PACKAGE_VERSION_MAJOR ${METIER_VERSION_MAJOR})
+  set(CPACK_PACKAGE_VERSION_MINOR ${METIER_VERSION_MINOR})
+  set(CPACK_PACKAGE_VERSION_PATCH ${METIER_VERSION_PATCH})
 
   set(RESOURCE_FILES
     "${APP_ICON_RESOURCE}")
@@ -157,9 +160,9 @@ if(APPLE)
   set_target_properties("${PROJECT_NAME}" PROPERTIES
     MACOSX_BUNDLE TRUE
     MACOSX_BUNDLE_BUNDLE_NAME "${METIER_APPSTREAM_NAME}"
-    MACOSX_BUNDLE_BUNDLE_VERSION "1.0.0"
+    MACOSX_BUNDLE_BUNDLE_VERSION "${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}"
     MACOSX_BUNDLE_COPYRIGHT "Copyright (c) 2021 Open Transactions"
-    MACOSX_BUNDLE_SHORT_VERSION_STRING "1.0.0"
+    MACOSX_BUNDLE_SHORT_VERSION_STRING "${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}"
     MACOSX_BUNDLE_GUI_IDENTIFIER "${METIER_APPSTREAM_ID}"
     MACOSX_BUNDLE_ICON_FILE "app-1024.icns"
     RESOURCE "${RESOURCE_FILES}"
