--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -3,7 +3,11 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-set(cxx-sources "app.cpp")
+set(cxx-sources
+    "app.cpp"
+    "factory.cpp"
+    "legacy.cpp"
+)
 set(cxx-headers "imp.hpp")
 
 if(METIER_QML_INTERFACE)
@@ -15,11 +19,6 @@ if(METIER_QML_INTERFACE)
   set(moc-headers "qml.hpp")
   qt5_wrap_cpp(moc-sources "${moc-headers}")
 else()
-  list(
-    APPEND
-    cxx-sources
-    "legacy.cpp"
-  )
   set(moc-headers "")
   set(moc-sources "")
 endif()
@@ -31,14 +30,16 @@ add_library(
   "${moc-sources}"
   "${moc-headers}"
 )
-
 target_link_libraries(
   metier-app
   PRIVATE
+    Boost::headers
     Qt5::Core
     Qt5::Gui
+    Qt5::Widgets
     opentxs
 )
+target_compile_definitions(metier-app PRIVATE METIER_APP_NAME="${PROJECT_NAME}")
 
 if(NOT METIER_BUNDLED_OPENTXS)
   target_include_directories(
@@ -48,6 +49,7 @@ endif()
 
 if(METIER_QML_INTERFACE)
   target_link_libraries(metier-app PRIVATE Qt5::Qml Qt5::Quick)
+  target_compile_definitions(metier-app PRIVATE METIER_QML_INTERFACE=1)
 else()
-  target_link_libraries(metier-app PRIVATE Qt5::Widgets)
+  target_compile_definitions(metier-app PRIVATE METIER_QML_INTERFACE=0)
 endif()
