Use cmake variables for packaging names.

--- a/package/linux/desktop.in
+++ b/package/linux/desktop.in
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Version=1.4
+Version=@METIER_VERSION_MAJOR@.@METIER_VERSION_MINOR@.@METIER_VERSION_PATCH@
 Type=Application
 Terminal=false
-Exec=@CMAKE_INSTALL_FULL_BINDIR@/@PROJECT_NAME@
+Exec=@CMAKE_INSTALL_FULL_BINDIR@/@METIER_GUI_OUTPUT_NAME@
 Name=@METIER_APPSTREAM_NAME@
 Icon=@METIER_APPSTREAM_ID@
 Categories=Network;Office;Finance;P2P;Qt
