--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -137,10 +137,10 @@ endif()
 
 if(APPLE)
   install(
-    TARGETS "${PROJECT_NAME}" BUNDLE DESTINATION . COMPONENT METIER-BUNDLE
+    TARGETS "${PROJECT_NAME}" BUNDLE DESTINATION . COMPONENT APP-BUNDLE
   )
 else()
-  install(TARGETS "${PROJECT_NAME}" COMPONENT METIER_BIN)
+  install(TARGETS "${PROJECT_NAME}" COMPONENT APP)
 endif()
 
 if(APPLE)
@@ -151,11 +151,11 @@ if(APPLE)
 
   set(CPACK_DRAGNDROP_COMPONENT_INSTALL TRUE)
   set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
-  set(CPACK_DMG_METIER-BUNDLE_FILE_NAME
-      "metier-${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}"
+  set(CPACK_DMG_APP-BUNDLE_FILE_NAME
+      "${PROJECT_NAME}-${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}"
   )
-  set(CPACK_DMG_METIER-CTL_FILE_NAME
-      "metierctl-${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}"
+  set(CPACK_DMG_CLI_FILE_NAME
+      "${METIER_CLI_COMMAND}-${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}"
   )
 
   get_cmake_property(CPACK_COMPONENTS_ALL COMPONENTS)
@@ -165,7 +165,7 @@ if(APPLE)
     secp256k1
   )
 
-  set(CPACK_PACKAGE_NAME metier)
+  set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
   set(CPACK_PACKAGE_VERSION_MAJOR ${METIER_VERSION_MAJOR})
   set(CPACK_PACKAGE_VERSION_MINOR ${METIER_VERSION_MINOR})
   set(CPACK_PACKAGE_VERSION_PATCH ${METIER_VERSION_PATCH})
@@ -175,8 +175,9 @@ if(APPLE)
   set_target_properties(
     "${PROJECT_NAME}"
     PROPERTIES
+      OUTPUT_NAME "${METIER_GUI_OUTPUT_NAME}"
       MACOSX_BUNDLE TRUE
-      MACOSX_BUNDLE_BUNDLE_NAME "${METIER_APPSTREAM_NAME}"
+      MACOSX_BUNDLE_BUNDLE_NAME "${METIER_GUI_OUTPUT_NAME}"
       MACOSX_BUNDLE_BUNDLE_VERSION
       "${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}"
       MACOSX_BUNDLE_COPYRIGHT "Copyright (c) 2021 Open Transactions"
@@ -191,7 +192,16 @@ if(APPLE)
   include(CPack)
 elseif(WIN32)
   set_target_properties(
-    "${PROJECT_NAME}" PROPERTIES RESOURCE "${RESOURCE_FILES}" WIN32_EXECUTABLE
-                                                              TRUE
+    "${PROJECT_NAME}"
+    PROPERTIES 
+      OUTPUT_NAME "${METIER_GUI_OUTPUT_NAME}"
+      RESOURCE "${RESOURCE_FILES}"
+      WIN32_EXECUTABLE TRUE
+  )
+else()
+  set_target_properties(
+    "${PROJECT_NAME}"
+    PROPERTIES
+      OUTPUT_NAME "${METIER_GUI_OUTPUT_NAME}"
   )
 endif()
