--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -30,4 +30,4 @@ if(NOT METIER_BUNDLED_OPENTXS)
   )
 endif()
 
-install(TARGETS "${METIER_CLI_COMMAND}" COMPONENT METIER-CTL)
+install(TARGETS "${METIER_CLI_COMMAND}" COMPONENT CLI)
