--- a/package/linux/metainfo.xml.in
+++ b/package/linux/metainfo.xml.in
@@ -17,7 +17,7 @@
     <release version="21.1" date="2021-04-07" />
   </releases>
   <provides>
-    <binary>metier</binary>
+    <binary>@METIER_GUI_OUTPUT_NAME@</binary>
   </provides>
   <project_license>MPL-2.0</project_license>
   <developer_name>The Open-Transactions Developers</developer_name>
