Update metainfo.xml for 21.4 release

--- a/package/linux/metainfo.xml.in
+++ b/package/linux/metainfo.xml.in
@@ -12,6 +12,7 @@
   <url type="bugtracker">https://github.com/Open-Transactions/metier/issues</url>
   <launchable type="desktop-id">@METIER_APPSTREAM_ID@.desktop</launchable>
   <releases>
+    <release version="21.4" date="2021-09-30" />
     <release version="21.3" date="2021-08-05" />
     <release version="21.2" date="2021-06-29" />
     <release version="21.1" date="2021-04-07" />
