--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -152,7 +152,7 @@ if(APPLE)
   set(CPACK_DRAGNDROP_COMPONENT_INSTALL TRUE)
   set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
   set(CPACK_DMG_APP-BUNDLE_FILE_NAME
-      "${PROJECT_NAME}-${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}"
+      "${METIER_GUI_OUTPUT_NAME}-${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}"
   )
   set(CPACK_DMG_CLI_FILE_NAME
       "${METIER_CLI_COMMAND}-${METIER_VERSION_MAJOR}.${METIER_VERSION_MINOR}.${METIER_VERSION_PATCH}"
