--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library(metier-rpc OBJECT "")
 add_subdirectory(api)
 add_subdirectory(app)
 add_subdirectory(cli)
+add_subdirectory(libmatterfi)
 add_subdirectory(models)
 add_subdirectory(rpc)
 add_subdirectory(skin)
